--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -67,6 +67,23 @@
                 padding-bottom: 30px;
             }
         }
+        .actions-login {
+            width: 100%;
+            margin-top: 20px;
+            .actions-btn {
+                width: 100%;
+                padding: 0.5em;
+                background-color: #0BBBD7;
+                color: white;
+                font-size: 16px;
+                font-weight: 600;
+                border-radius: 5px;
+                &:hover {
+                text-decoration: none;
+                background-color: rgba(8, 161, 185, 0.884);
+                }
+            }
+        }
         .login {
             margin-top: 20px;
             text-align: center;
@@ -85,6 +102,21 @@
                     font-weight: 600;
                 }
             }
+        }
+        .another-pages {
+            margin-top: 20px;
+            text-align: right;
+            .to-signup {
+                color: #595959;
+            }
+            .re-password {
+                color: #595959;
+            }
+        }
+        .message {
+            margin-top: 20px;
+            font-size: 12px;
+            color: #595959;
         }
 
     }
