--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -133,24 +133,7 @@
     }
 }
 
-.sd {
-    font-size: 36px;
-    width: auto;
-    display: inline;
-}
-
 /* 練習日誌（月間表示） */
-.practice_day {
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 1.4;
-    padding: 0;
-    text-align: center;
-    width: auto;
-    max-width: 100%;
-    display: inline;
-}
-
 .practice_diary_header {
     height: 76px;
     padding: 0px 20px;
@@ -159,503 +142,230 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    .sd {
+        font-size: 36px;
+        width: auto;
+        display: inline;
+    }
+    .practice_day {
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 1.4;
+        padding: 0;
+        text-align: center;
+        width: auto;
+        max-width: 100%;
+    }
 }
 
 .month_objective {
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    flex: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
     height: auto;
-    justify-content: center;
     width: 100%;
-    position: relative;
-    display: flex;
-}
-
-.month_objective_title {
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    flex: none;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    height: auto;
-    justify-content: flex-start;
-    width: 100%;
-    max-width: 100%;
-    position: relative;
-    display: flex;
-}
-
-.month_objective_title_name {
-    color: #333;
-    flex: none;
-    font-family: Lato;
-    font-size: 20px;
-    font-weight: 700;
-    height: auto;
-    line-height: 1.4;
-    padding: 0px 20px 0px 0px;
-    text-align: center;
-    width: 15%;
-    max-width: 15%;
-    justify-content: center;
-    display: flex;
-    position: relative;
-}
-
-.month_objective_title_input {
-    background: #FFFFFF;
-    border-bottom: 1px solid #EEEEEE;
-    border-left: 1px solid #EEEEEE;
-    border-radius: 4px;
-    border-right: 1px solid #EEEEEE;
-    border-top: 1px solid #EEEEEE;
-    box-shadow: none;
-    color: #333;
-    flex: none;
-    font-family: Lato;
-    font-size: 15px;
-    font-weight: 400;
-    height: 40px;
-    justify-content: center;
-    letter-spacing: 0em;
-    line-height: 1.4;
-    margin: 0px 0px 0px 0px;
-    opacity: 1;
-    padding: 10px 10px 10px 10px;
-    text-align: left;
-    width: 75%;
-    max-width: 75%;
-}
-
-.for_month_objective_textarea {
-    align-content: flex-start;
-    align-items: flex-start;
-    background: rgba(0,0,0,0.0);
-    border-radius: 0;
-    flex: none;
-    height: auto;
-    margin: 10px 0px 10px 0px;
-    opacity: 1;
-    overflow-x: visible;
-    overflow-y: visible;
-    padding: 0 0 0 0;
-    width: 75%;
-    max-width: 75%;
-    display: flex;
- }
-
-.for_month_objective_textarea_input {
-    background: #FFFFFF;
-    border-bottom: 1px solid #EEEEEE;
-    border-left: 1px solid #EEEEEE;
-    border-radius: 4px;
-    border-right: 1px solid #EEEEEE;
-    border-top: 1px solid #EEEEEE;
-    box-shadow: none;
-    color: #333;
-    flex: none;
-    font-family: Lato;
-    font-size: 15px;
-    font-weight: 400;
-    height: 80px;
-    justify-content: center;
-    letter-spacing: 0em;
-    line-height: 1.4;
-    opacity: 1;
-    padding: 10px 10px 10px 10px;
-    text-align: left;
-    text-shadow: none;
-    width: 100%;
-    max-width: 100%;
-}
-
-.month_objective_title_button {
-    background: #FFFFFF;
-    border-bottom: 1px solid #EEEEEE;
-    border-left: 1px solid #EEEEEE;
-    border-radius: 4px;
-    border-right: 1px solid #EEEEEE;
-    border-top: 1px solid #EEEEEE;
-    color: #333;
-    flex: none;
-    font-family: Lato;
-    font-size: 15px;
-    font-weight: 400;
-    height: 40px;
-    justify-content: center;
-    letter-spacing: 0em;
-    line-height: 1.4;
-    margin: 0px 5px 0px 5px;
-    opacity: 1;
-    padding: 0px;
-    text-align: left;
-    width: calc(10% - 10px);
-    max-width: calc(10% - 10px);
-    display: flex;
-    position: relative;
-    align-items: center;
-    p {
-        border-radius: 0;
-        color: #000000;
-        font-family: Lato;
-        font-size: 15px;
-        font-weight: 400;
-        letter-spacing: 0em;
-        line-height: 1;
-        margin: 0 0 0 0;
-        opacity: 1;
-        padding: 0px 0px 2px 0px;
-        text-align: center;
-        justify-content: center;
-        display: flex;
-    }
-}
-
-.month_objective__todo_button_area {
-    align-content: center;
-    align-items: center;
-    background: rgba(238, 238, 238, 0);
-    flex: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: 80px;
-    justify-content: flex-end;
-    width: 10%;
-    max-width: 10%;
-    display: flex;
-    position: relative;
-}
-
-.month_objective_todo_button {
-    background: #FFFFFF;
-    border-bottom: 1px solid #EEEEEE;
-    border-left: 1px solid #EEEEEE;
-    border-radius: 4px;
-    border-right: 1px solid #EEEEEE;
-    border-top: 1px solid #EEEEEE;
-    color: #333;
-    flex: none;
-    font-family: Lato;
-    font-size: 15px;
-    font-weight: 400;
-    height: 40px;
-    justify-content: center;
-    letter-spacing: 0em;
-    line-height: 1.4;
-    margin: 0px 5px 0px 5px;
-    opacity: 1;
-    padding: 0px;
-    text-align: left;
-    width: calc(100% - 10px);
-    max-width: calc(100% - 10px);
-    display: flex;
-    align-items: center;
-    p {
-        border-radius: 0;
-        color: #000000;
-        font-family: Lato;
-        font-size: 15px;
-        font-weight: 400;
-        letter-spacing: 0em;
-        line-height: 1;
-        margin: 0 0 0 0;
-        opacity: 1;
-        padding: 0px 0px 2px 0px;
-        text-align: center;
-        justify-content: center;
-        display: flex;
-    }
-}
-
-.calender_header {
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    border-bottom: 1px solid rgb(238, 238, 238);
-    border-left: 1px solid rgb(238, 238, 238);
-    border-right: 1px solid rgb(238, 238, 238);
-    border-top: 1px solid rgb(238, 238, 238);
-    flex: none;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    height: auto;
-    justify-content: space-between;
-    padding: 0px 0px 0px 0px;
-    width: 100%;
-    max-width: 100%;
-    display: flex;
-    position: relative;
-}
-
-.calender_header_col_1 {
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    border-bottom: 0px solid #EEEEEE;
-    border-left: 0px solid #EEEEEE;
-    border-right: 1px solid #EEEEEE;
-    border-top: 0px solid #EEEEEE;
-    flex: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: 40px;
-    justify-content: center;
-    padding: 0px 20px 0px;
-    width: 12%;
-    max-width: 12%;
-    display: flex;
-    position: relative;
-    p {
-        color: #333;
-        font-family: Lato;
-        font-size: 15px;
-        font-weight: 500;
+    .month_objective_title {
+        align-items: center;
         height: auto;
-        line-height: 1.4;
-        text-align: left;
-        width: auto;
-        max-width: 100%;
         justify-content: flex-start;
-        display: flex;
-    }
-}
-
-.calender_header_col_2 {
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    border-bottom: 0px solid #EEEEEE;
-    border-right: 1px solid #EEEEEE;
-    border-top: 0px solid #EEEEEE;
-    flex: none;
-    flex-wrap: nowrap;
-    height: 40px;
-    justify-content: left;
-    padding: 0px 20px 0px;
-    width: 60%;
-    max-width: 60%;
-    display: flex;
-    position: relative;
-    p {
-        color: #333;
-        font-family: Lato;
-        font-size: 15px;
-        font-weight: 500;
-        height: auto;
-        line-height: 1.4;
-        text-align: left;
-        width: auto;
+        width: 100%;
         max-width: 100%;
-        justify-content: flex-start;
         display: flex;
-    }
-}
-
-.calender_header_col_3 {
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    border-bottom: 0px solid #EEEEEE;
-    border-left: 0px solid #EEEEEE;
-    border-right: 1px solid #EEEEEE;
-    border-top: 0px solid #EEEEEE;
-    flex: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: 40px;
-    justify-content: center;
-    padding: 0px 20px 0px;
-    width: 13%;
-    max-width: 13%;
-    display: flex;
-    position: relative;
-    p {
-        color: #333;
-        font-family: Lato;
-        font-size: 15px;
-        font-weight: 500;
-        height: auto;
-        line-height: 1.4;
-        text-align: left;
-        width: auto;
-        max-width: 100%;
-        justify-content: flex-start;
-        display: flex;
-    }
-}
-
-.calender_header_col_4 {
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    border-bottom: 0px solid #EEEEEE;
-    border-left: 0px solid #EEEEEE;
-    border-top: 0px solid #EEEEEE;
-    flex: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: 40px;
-    justify-content: center;
-    padding: 0px 20px 0px;
-    width: 15%;
-    max-width: 15%;
-    display: flex;
-    position: relative;
-    p {
-        color: #333;
-        font-family: Lato;
-        font-size: 15px;
-        font-weight: 500;
-        height: auto;
-        line-height: 1.4;
-        text-align: left;
-        width: auto;
-        max-width: 100%;
-        justify-content: flex-start;
-        display: flex;
-    }
-}
-
-.calender_contents {
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    flex: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: auto;
-    justify-content: flex-start;
-    margin: 5px 0px 0px 0px;
-    width: 100%;
-    max-width: 100%;
-    display: flex;
-}
-
-.calender_content {
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    border-bottom: 1px solid #EEEEEE;
-    border-left: 1px solid #EEEEEE;
-    border-right: 1px solid #EEEEEE;
-    border-top: 1px solid #EEEEEE;
-    box-shadow: none;
-    flex: none;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    height: auto;
-    justify-content: space-between;
-    margin: 0px 0px 0px 0px;
-    width: 100%;
-    max-width: 100%;
-    display: flex;
-}
-
-.calender_content_col_2 {
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    border-right: 1px solid #EEEEEE;
-    display: flex;
-    flex-wrap: nowrap;
-    height: auto;
-    justify-content: center;
-    padding: 5px 0px 5px 0px;
-    margin-left: 10px;
-    width: 60%;
-    max-width: 60%;
-    display: flex;
-    .buttons {
-        margin: auto;
-        a {
-            text-decoration: underline;
-            text-decoration-color: #BFBFBF;
+        .month_objective_title_name {
+            font-size: 20px;
+            font-weight: 700;
+            height: auto;
+            line-height: 1.4;
+            padding: 0 20px 0 0;
+            text-align: center;
+            width: 15%;
+        }
+        .month_objective_title_input {
+            border: 1px solid #EEEEEE;
+            border-radius: 4px;
+            font-size: 15px;
+            font-weight: 400;
+            height: 40px;
+            letter-spacing: 0em;
+            line-height: 1.4;
+            margin: 0;
+            opacity: 1;
+            padding: 10px;
+            text-align: left;
+            width: 75%;
+        }
+        .for_month_objective_textarea {
+            margin: 10px 0;
+            opacity: 1;
+            width: 75%;
+            .for_month_objective_textarea_input {
+                border: 1px solid #EEEEEE;
+                border-radius: 4px;
+                font-size: 15px;
+                font-weight: 400;
+                height: 80px;
+                letter-spacing: 0em;
+                line-height: 1.4;
+                opacity: 1;
+                padding: 10px;
+                text-align: left;
+                width: 100%;
+            }
+        }
+        .month_objective__todo_button_area {
+            display: flex;
+            flex-direction: column;
+            height: 80px;
+            justify-content: flex-end;
+            width: calc(10% - 10px);
+            display: flex;
+            button {
+                background-color: #fff;
+                border: 1px solid #EEEEEE;
+                border-radius: 4px;
+                font-size: 15px;
+                font-weight: 400;
+                height: 40px;
+                justify-content: center;
+                margin: 0 5px;
+                width: 100%;
+                display: flex;
+                align-items: center;
+            }
         }
     }
-}
-
-.practice_menu {
-    align-content: center;
-    align-items: center;
-    background: gray;
-    border-radius: 12px;
-    flex: none;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    height: auto;
-    justify-content: flex-start;
-    margin: 5px 0px 5px 0px;
-    padding: 10px 10px 10px 10px;
-    width: 85%;
-    max-width: 90%;
-    display: flex;
-}
-
-.practice_timezone {
-    align-content: center;
-    align-items: center;
-    background: #FFFFFF;
-    border-radius: 16px;
-    flex: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: auto;
-    justify-content: center;
-    margin: 0px 5px 0px 5px;
-    padding: 5px 15px 5px 15px;
-    width: auto;
-    max-width: calc(100% - 10px);
-    display: flex;
-    p {
-        color: #444444;
-        font-family: Lato;
+    button {
+        background-color: #fff;
+        border: 1px solid #EEEEEE;
+        border-radius: 4px;
         font-size: 15px;
-        font-weight: 700;
-        height: auto;
-        line-height: 1.4;
-        text-align: center;
-        width: auto;
-        max-width: 100%;
+        font-weight: 400;
+        height: 40px;
         justify-content: center;
+        margin: 0 5px;
+        width: calc(10% - 10px);
         display: flex;
+        align-items: center;
+    }
+}
+.calender_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #EEEEEE;
+    height: 60px;
+    width: 100%;
+    .calender_header_col {
+        border-right: 1px solid #EEEEEE;
+        padding: 0 20px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        p {
+            font-size: 15px;
+            color: #333;
+        }
+    }
+    .col_1 {
+        width: 12%;
+    }
+    .col_2 {
+        width: 60%;
+    }
+    .col_3 {
+        width: 13%;
+    }
+    .col_4 {
+        width: 15%;
+        border: none;
     }
 }
 
-.practice_content {
-    align-content: center;
-    align-items: center;
-    background: rgba(0,0,0,0.0);
-    border-bottom: 2px solid #FFFFFF;
-    border-left: 2px solid #FFFFFF;
-    border-radius: 16px;
-    border-right: 2px solid #FFFFFF;
-    border-top: 2px solid #FFFFFF;
-    flex: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
+
+.calender_contents {
     height: auto;
-    justify-content: center;
-    margin: 0px 5px 0px 5px;
-    padding: 5px 15px 5px 15px;
-    width: auto;
-    max-width: calc(100% - 10px);
-    display: flex;
-    p {
-        color: #FFFFFF;
-        font-family: Lato;
-        font-size: 15px;
-        font-weight: 700;
-        height: auto;
-        line-height: 1.4;
-        text-align: center;
-        width: auto;
-        max-width: 100%;
-        justify-content: center;
+    margin: 5px 0px 0px 0px;
+    width: 100%;
+    border-left: 1px solid #EEEEEE;
+    border-top: 1px solid #EEEEEE;
+    .calender_content {
         display: flex;
+        border-bottom: 1px solid #EEEEEE;
+        height: auto;
+        width: 100%;
+        justify-content: center;
+        height: auto;
+        .calender_content_col {
+            border-right: 1px solid #EEEEEE;
+            padding: 0 20px;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            p {
+                font-size: 15px;
+                color: #333;
+            }
+        }
+        .col_1 {
+            width: 12%;
+        }
+        .col_2 {
+            width: 60%;
+            display: block;
+            padding: 5px 20px;
+            .practice {
+                display: flex;
+                align-items: center;
+                .practice_menu {
+                    background-color: #0BBBD7;
+                    border-radius: 12px;
+                    height: auto;
+                    justify-content: flex-start;
+                    margin: 5px 0;
+                    width: 85%;
+                    display: flex;
+                    padding: 10px;
+                    p {
+                        color: white;
+                        font-size: 15px;
+                        font-weight: 700;
+
+                    }
+                    .practice_timezone {
+                        background-color: #fff;
+                        border-radius: 16px;
+                        height: auto;
+                        margin: 0 5px;
+                        padding: 5px 15px;
+                        width: auto;
+                        p {
+                            color: #333;    
+                        }
+                    }
+                    .practice_content {
+                        border: 2px solid #fff;
+                        border-radius: 16px;
+                        height: auto;
+                        margin: 0 5px;
+                        padding: 5px 15px;
+                        width: auto;
+                    }
+                }
+                .buttons {
+                    width: 15%;
+                    text-align: center;
+                    a {
+                        text-decoration: underline;
+                    }
+                }
+
+            }
+        }
+        .col_3 {
+            width: 13%;
+        }
+        .col_4 {
+            width: 15%;
+            border: none;
+        }
     }
 }
