--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -46,6 +46,8 @@
     width: 100%;
     height: auto;
     min-height: 100%;
+    padding-right: 50px;
+    padding-left: 50px;
   }
   
   .container {
