--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -104,6 +104,15 @@
                     </div>
                 </div>
             </div>
+            <div class="parent">
+                <div class="form-box">
+                    <div class="forms-item">
+                        材料
+                    </div>
+                    <div class="add-botton-box">
+                        
+                    </div>
+                </div>
             <% end %>
             <div class="thoughts">
                 <h3>感想</h3>
