--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,134 +7,118 @@
             </div>
         <% end %>
         <div class="notebook">
-        <%= form_with model: @post, url: "/posts/create" do |f| %>
-            <div class="notes">
-                <div class="days">
-                    <h3>日付</h3>
-                    <%= raw sprintf(
-                                f.date_select(
-                                    :practice_day,
-                                    use_month_numbers: true,
-                                    default: Date.today,
-                                    date_separator: '%s'
-                                ),
-                                '年 ', '月 '
-                            ) + '日' %>
-                </div>
-                <div class="timezone">
-                    <h3>時間帯</h3>
-                        <%= f.radio_button :practice_timezone, "朝", checked: true %>
-                        <label for="朝">朝</label>
-                        <%= f.radio_button :practice_timezone, "午前" %>
-                        <label for="午前">午前</label>
-                        <%= f.radio_button :practice_timezone, "午後" %>
-                        <label for="午後">午後</label>
-                </div>
-            </div>
-            <div class="notes">
-                <div class="weather">
-                    <h3>天気</h3>
-                    <%= f.radio_button :weather, "晴れ", checked: true %>晴れ
-                    <%= f.radio_button :weather, "曇り" %>曇り
-                    <%= f.radio_button :weather, "雨" %>雨
-                    <%= f.radio_button :weather, "雪" %>雪
-                </div>
-                <div class="place">
-                    <h3>場所</h3>
-                    <%= f.radio_button :place, "ロード", checked: true %>ロード
-                    <%= f.radio_button :place, "トラック" %>トラック
-                    <%= f.radio_button :place, "クロカン" %>クロカン
-                </div>
-            </div>
-            <div class="kind_of_practice">
-                <h3>練習の種類</h3>
-                <%= f.radio_button :kind_of_practice, "ジョグ", checked: true %>ジョグ
-                <%= f.radio_button :kind_of_practice, "ペース走" %>ペース走
-                <%= f.radio_button :kind_of_practice, "ビルドアップ" %>ビルドアップ
-                <%= f.radio_button :kind_of_practice, "距離走" %>距離走
-                <br>
-                <%= f.radio_button :kind_of_practice, "インターバル" %>インターバル
-                <%= f.radio_button :kind_of_practice, "レペティション" %>レペティション
-                <%= f.radio_button :kind_of_practice, "レース" %>レース
-                <%= f.radio_button :kind_of_practice, "レスト" %>レスト
-            </div>
-            <%= f.fields_for :post_records do |r| %>
-            <div class="results">
-                <h3>結果</h3>
-                <div class="result">
-                    <div class="result-header">
-                        <div class="remove">
-                        </div>
-                        <div class="distance">
-                            <p>距離</p>
-                            <p class="distance-text">[km]</p>
-                        </div>
-                        <div class="time-jog switchItems-interval">
-                            <p>タイム</p>
-                            <div class="time-detail">
-                                <div class="hour">時間[h]</div>
-                                <div class="minute">分[m]</div>
-                                <div class="second">秒[sec]</div>
-                            </div>
-                        </div>
+            <%= form_with(model: @post, url: "/posts/create", local: true) do |f| %>
+                <div class="notes">
+                    <!-- 日付-->
+                    <div class="days">
+                        <h3>日付</h3>
+                        <%= raw sprintf(
+                            f.date_select(
+                                :practice_day,
+                                use_month_numbers: true,
+                                default: Date.today,
+                                date_separator: '%s'
+                            ),
+                            '年 ', '月 '
+                        ) + '日' %>
                     </div>
-                    <div class="result-details">
-                        <div class="remove">
-                            <button type="button" class="delete">×</button>
-                        </div>
-                        <div class="distance">
-                            <%= r.number_field :distance_km %>
-                        </div>
-                        <div class="time-jog">
-                            <div class="time-detail">
-                                <div class="hour">
-                                    <%= r.number_field :time_hour %>
-                                </div>
-                                <div class="minute">
-                                    <%= r.number_field :time_minute %>
-                                </div>
-                                <div class="second">
-                                    <%= r.number_field :time_second %>
+                    <!-- 時間帯 -->
+                    <div class="timezone">
+                        <h3>時間帯</h3>
+                            <%= f.radio_button :practice_timezone, "朝", checked: true %>
+                            <label for="朝">朝</label>
+                            <%= f.radio_button :practice_timezone, "午前" %>
+                            <label for="午前">午前</label>
+                            <%= f.radio_button :practice_timezone, "午後" %>
+                            <label for="午後">午後</label>
+                    </div>
+                </div>
+                <!-- 天気・場所 -->
+                <div class="notes">
+                    <div class="weather">
+                        <h3>天気</h3>
+                        <%= f.radio_button :weather, "晴れ", checked: true %>晴れ
+                        <%= f.radio_button :weather, "曇り" %>曇り
+                        <%= f.radio_button :weather, "雨" %>雨
+                        <%= f.radio_button :weather, "雪" %>雪
+                    </div>
+                    <div class="place">
+                        <h3>場所</h3>
+                        <%= f.radio_button :place, "ロード", checked: true %>ロード
+                        <%= f.radio_button :place, "トラック" %>トラック
+                        <%= f.radio_button :place, "クロカン" %>クロカン
+                    </div>
+                </div>
+                <!-- 練習の種類 -->
+                <div class="kind_of_practice">
+                    <h3>練習の種類</h3>
+                    <%= f.radio_button :kind_of_practice, "ジョグ", checked: true %>ジョグ
+                    <%= f.radio_button :kind_of_practice, "ペース走" %>ペース走
+                    <%= f.radio_button :kind_of_practice, "ビルドアップ" %>ビルドアップ
+                    <%= f.radio_button :kind_of_practice, "距離走" %>距離走
+                    <br>
+                    <%= f.radio_button :kind_of_practice, "インターバル" %>インターバル
+                    <%= f.radio_button :kind_of_practice, "レペティション" %>レペティション
+                    <%= f.radio_button :kind_of_practice, "レース" %>レース
+                    <%= f.radio_button :kind_of_practice, "レスト" %>レスト
+                </div>
+                <!-- 結果 -->
+                <div class="results">
+                    <h3>結果</h3>
+                    <div class="result">
+                        <div class="result-header">
+                            <div class="remove">
+                            </div>
+                            <div class="distance">
+                                <p>距離</p>
+                                <p class="distance-text">[km]</p>
+                            </div>
+                            <div class="time-jog switchItems-interval">
+                                <p>タイム</p>
+                                <div class="time-detail">
+                                    <div class="hour">時間[h]</div>
+                                    <div class="minute">分[m]</div>
+                                    <div class="second">秒[sec]</div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="under-details">
-                        <button class="plus" type="button">＋</button>
+                        <div id="detail-association-insertion-point"></div>
+                        <%= f.fields_for :post_records do |form| %>
+                            <%= render "post_record_fields", f: form %>
+                        <% end %>
+                        <div class="add-botton-box">
+                            <%= link_to_add_association "追加ボタン", f, :post_records,
+                                class: 'add_fields',
+                                id: 'add-btn',
+                                data: {
+                                    association_insertion_node: '#detail-association-insertion-point',
+                                    association_insertion_method: 'after'
+                                }
+                            %>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="parent">
-                <div class="form-box">
-                    <div class="forms-item">
-                        材料
+                <div class="thoughts">
+                    <h3>感想</h3>
+                    <div class="strength">
+                        <span>主観的強度</span>
+                        <%= f.radio_button :strength, "1", checked: true %>1
+                        <%= f.radio_button :strength, "2" %>2
+                        <%= f.radio_button :strength, "3" %>3
+                        <%= f.radio_button :strength, "4" %>4
+                        <%= f.radio_button :strength, "5" %>5
                     </div>
-                    <div class="add-botton-box">
-                        
+                    <div class="content">
+                        <div class="FlexTextarea">
+                            <div class="FlexTextarea__dummy" aria-hidden="true"></div>
+                            <%= f.text_area :content, class: "FlexTextarea__textarea", id: "FlexTextarea" %>
+                        </div>
                     </div>
+                </div>
+                <div class="save-button">
+                    <%= f.submit "保存" %>
                 </div>
             <% end %>
-            <div class="thoughts">
-                <h3>感想</h3>
-                <div class="strength">
-                    <span>主観的強度</span>
-                    <%= f.radio_button :strength, "1", checked: true %>1
-                    <%= f.radio_button :strength, "2" %>2
-                    <%= f.radio_button :strength, "3" %>3
-                    <%= f.radio_button :strength, "4" %>4
-                    <%= f.radio_button :strength, "5" %>5
-                </div>
-                <div class="content">
-                    <div class="FlexTextarea">
-                        <div class="FlexTextarea__dummy" aria-hidden="true"></div>
-                        <%= f.text_area :content, class: "FlexTextarea__textarea", id: "FlexTextarea" %>
-                    </div>
-                </div>
-            </div>
-            <div class="save-button">
-                <%= f.submit "保存" %>
-            </div>
-        <% end %>
         </div>
     </section>
 </div>
