improve post controller

--- a/app/views/users/main.html.erb
+++ b/app/views/users/main.html.erb
@@ -10,25 +10,47 @@
                 </div>
                 <div class="practice">
                     <div class="result">
-                        <p><%= post.place %>/<%= post.kind_of_practice %></p>
-                        <div class="distance-time">
-                            <div class="distance">
-                                <span class="figure">
-                                    <%= post.post_records[0].distance_km %>
-                                </span>
-                                <span>km</span>
+                        <% if post.kind_of_practice == "インターバル" or post.kind_of_practice == "レペティション" %>
+                            <p><%= post.place %>/<%= post.kind_of_practice %></p>
+                            <div class="distance-time">
+                                <div class="distance">
+                                    <span class="figure">
+                                        <%= post.post_records[0].distance_km %>
+                                    </span>
+                                    <span>km</span>
+                                </div>
+                                <div class="time">
+                                    <p>時間</p>
+                                    <p class="figure">
+                                        <%= post.post_records[0].time_hour %>:<%= post.post_records[0].time_minute %>:<%= post.post_records[0].time_second %>
+                                    </p>
+                                </div>
+                                <div class="pace">
+                                    <p>ペース</p>
+                                    <p class="figure"><%= post.post_records[0].pace_minute %>:<%= post.post_records[0].pace_second %></p>
+                                </div>
                             </div>
-                            <div class="time">
-                                <p>時間</p>
-                                <p class="figure">
-                                    <%= post.post_records[0].time_hour %>:<%= post.post_records[0].time_minute %>:<%= post.post_records[0].time_second %>
-                                </p>
+                        <% else %>
+                            <p><%= post.place %>/<%= post.kind_of_practice %></p>
+                            <div class="distance-time">
+                                <div class="distance">
+                                    <span class="figure">
+                                        <%= post.post_records[0].distance_km %>
+                                    </span>
+                                    <span>km</span>
+                                </div>
+                                <div class="time">
+                                    <p>時間</p>
+                                    <p class="figure">
+                                        <%= post.post_records[0].time_hour %>:<%= post.post_records[0].time_minute %>:<%= post.post_records[0].time_second %>
+                                    </p>
+                                </div>
+                                <div class="pace">
+                                    <p>ペース</p>
+                                    <p class="figure"><%= post.post_records[0].pace_minute %>:<%= post.post_records[0].pace_second %></p>
+                                </div>
                             </div>
-                            <div class="pace">
-                                <p>ペース</p>
-                                <p class="figure"><%= post.post_records[0].pace_minute %>:<%= post.post_records[0].pace_second %></p>
-                            </div>
-                        </div>
+                        <% end %>
                     </div>
                     <div class="detail">
                         <div class="weather">
