Create display of interval etc

--- a/app/views/posts/_post_record_fields.html.erb
+++ b/app/views/posts/_post_record_fields.html.erb
@@ -21,8 +21,8 @@
             </div>
         </div>
         <div class="type high">
-            <p><%= f.radio_button :type, "疾走" %>疾走</p>
-            <p><%= f.radio_button :type, "リカバリー" %>リカバリー</p>
+            <p><%= f.radio_button :record_type, 0 %>疾走</p>
+            <p><%= f.radio_button :record_type, 1 %>リカバリー</p>
         </div>
     </div>
 </div>
