--- a/app/views/posts/_post_record_fields.html.erb
+++ b/app/views/posts/_post_record_fields.html.erb
@@ -5,7 +5,7 @@
             <%= link_to_remove_association "削除", f %>
         </div>
         <div class="distance">
-            <%= f.number_field :distance_km, step: "0.1" %>
+            <%= f.number_field :distance, step: "0.1" %>
         </div>
         <div class="time">
             <div class="time-detail">
