--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,7 +7,7 @@
             </div>
         <% end %>
         <div class="notebook">
-            <%= form_with(model: @post, url: "/posts/create", local: true) do |f| %>
+            <%= form_with(model: @post, local: true) do |f| %>
                 <div class="notes">
                     <!-- 日付-->
                     <div class="days">
