Add modal function

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -110,7 +110,7 @@
         }
         a {
             font-size: 13px;
-            color: #545454;
+            color: #545454 !important;
             display: flex;
             align-items: center;
         }
